classDiagram
    direction TB

    namespace Infrastructure_REST {
        class OrdemServicoResourceImpl {
            +aprovarOrcamento(ordemServicoId) Response
        }
    }

    namespace Infrastructure_CrossCutting {
        class AuditoriaProxy {
            <<cross-cutting>>
            +envolver(T, Class~T~, RegistrarAuditoriaPort) T
            -interceptar(method, args) Any
        }
    }

    namespace Application_Ports_In {
        class AprovarOrcamentoUseCase {
            <<interface>>
            +aprovarOrcamento(ordemServicoId) ResumoOrdemServicoResDTO
        }
    }

    namespace Application_Service {
        class AprovarOrcamentoService {
            +aprovarOrcamento(ordemServicoId) ResumoOrdemServicoResDTO
            -validarClienteTitular(os, solicitanteId)
        }
    }

    namespace Application_Ports_Out {
        class JwtPort {
            <<interface>>
            +getUsuarioId() UsuarioId
        }
        class OrdemServicoRepositoryPort {
            <<interface>>
            +buscarPorId(OrdemServicoId) OrdemServico?
            +atualizar(OrdemServico) OrdemServico
        }
        class RegistrarAuditoriaPort {
            <<interface>>
            +registrar(TipoEntidade, TipoEventoAuditoria, String, Any?, Any?)
        }
    }

    namespace Domain {
        class OrdemServico {
            <<aggregate root>>
            +clienteId UsuarioId
            +status StatusOrdemServico
            +aprovarOrcamento()
        }
    }

    namespace Infrastructure_Adapters {
        class JwtAdapter {
            +getUsuarioId() UsuarioId
        }
        class OrdemServicoRepositoryAdapter {
            +buscarPorId(OrdemServicoId) OrdemServico?
            +atualizar(OrdemServico) OrdemServico
        }
        class AuditoriaRepositoryAdapter {
            +registrar(TipoEntidade, TipoEventoAuditoria, String, Any?, Any?)
        }
    }

    OrdemServicoResourceImpl --> AprovarOrcamentoUseCase : invoca

    AuditoriaProxy ..|> AprovarOrcamentoUseCase : wrap (Java Proxy)
    AuditoriaProxy --> AprovarOrcamentoService : delega execução
    AuditoriaProxy --> RegistrarAuditoriaPort : notifica após @Auditavel

    AprovarOrcamentoService ..|> AprovarOrcamentoUseCase : implementa
    AprovarOrcamentoService --> JwtPort : getUsuarioId()
    AprovarOrcamentoService --> OrdemServicoRepositoryPort : buscarPorId() atualizar()
    AprovarOrcamentoService --> OrdemServico : aprovarOrcamento()

    JwtAdapter ..|> JwtPort : implementa
    OrdemServicoRepositoryAdapter ..|> OrdemServicoRepositoryPort : implementa
    AuditoriaRepositoryAdapter ..|> RegistrarAuditoriaPort : implementa
